Enhance project stats
